tests/compile/use_after_free.stderr
error[E0499]: cannot borrow `client` as mutable more than once at a time
  --> tests/compile/use_after_free.rs:22:15
   |
14 |     let txn = client.transaction(&db);
   |               ------ first mutable borrow occurs here
...
22 |     let txn = client.transaction(&db);
   |               ^^^^^^ second mutable borrow occurs here
23 |     for item in items {
   |                 ----- first borrow later used here
